# S65-0326-Alphamen-AppliedDataScience

./: .gitignore  README.md  pyproject.toml
data/processed/: municipal_complaints_processed.csv
data/raw/: municipal_complaints.csv
docs/: data-science-lifecycle.md  mvp.md  plan.md  repository-walkthrough.md  setup.md
notebooks/: 00_jupyter_basics.ipynb  01_python_foundations.ipynb  02_numpy_basics.ipynb  03_pandas_foundations.ipynb  04_visualization_basics.ipynb
outputs/: category_summary.csv  daily_summary.csv  hotspot_summary.csv  keyword_summary.csv  location_summary.csv  summary.json
scripts/: first_analysis.py  process_dataset.py
src/grievance_insights/: __init__.py  analysis.py
