[project]
name = "municipal-grievance-insights"
version = "0.1.0"
description = "Applied data science foundations for municipal grievance analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.8",
  "numpy>=2.4.4",
  "pandas>=3.0.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
